--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -329,7 +329,7 @@
 "Human Web" = "Human Web";
 
 /* [Settings -> Human Web]Footer text for Fair Blocking section" */
-"Human Web footer" = "CLIQZ travaille avec des données anonymisées sur les recherches et les visites aux sites web. Nous appelons la technologie qui collecte ces données pour construire l'index `Human Web`.";
+"Human Web footer" = "CLIQZ travaille avec des données anonymisées sur les recherches et les visites aux sites web. Nous appelons la technologie qui collecte ces données pour construire l'index \"Human Web\".";
 
 /* [Settings] Complementary Search */
 "Complementary Search" = "Recherche Complémentaire";
@@ -351,7 +351,7 @@
 "Block Ads footer" = "Le navigateur Cliqz doit d'abord télécharger certains composants afin de mettre en marche le Bloqueur de Pubs. Pour cela, vous devez être connecté·e· au Wi-Fi.";
 
 /* [Settings -> Block Ads] Fair Blocking footer */
-"Fair Mode footer" = "Un bloquage `équitable` qui affiche des pubs seulement dans certains cas sera ajouté bientôt.";
+"Fair Mode footer" = "Un bloquage \"équitable\" qui affiche des pubs seulement dans certains cas sera ajouté bientôt.";
 
 /* [Settings -> Clear Private Data] Clear Private Data footer */
 "Clear Private Data footer" = "Seulement les données ci-selectionnées seront effacées.";
