--- a/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
@@ -392,3 +392,69 @@
 
 /* [Settings -> About] Licenses */
 "Licenses" = "Licenses";
+
+/* [Settings] Limit Mobile Data Usage */
+"Limit Mobile Data Usage" = "Limit Mobile Data Usage";
+
+/* [Settings -> Limit Mobile Data Usage] toogle footer */
+"Download videos on Wi-Fi Only" = "Download videos on Wi-Fi Only";
+
+/* [Connect] No Wi-Fi connection alert title */
+"No Wi-Fi Connection" = "No Wi-Fi Connection";
+
+/* [Connect] No Wi-Fi connection alert message */
+"No Wi-Fi Connection message" = "You are not connected to a Wi-Fi network and vedio download with mobile data is restricted. \nTo change this, go to settings and disable the option, \"limit mobile data usage.\"";
+
+/* [Connect] Dismiss No Wi-Fi connection alert */
+"Dismiss" = "Dismiss";
+
+/* [Settings] Connect */
+"Connect" = "Connect";
+
+/* [Settings -> Connect] Add Connection title */
+"Add Connection" = "Add Connection";
+
+/* [Settings -> Connect] Add Connection footer */
+"Add Connection footer" = "Connect CLIQZ on your mobile devices with CLIQZ on your computer. This will allow you to send links or Youtube videos from your desktop straight to your smartphone or tablet.";
+
+/* [Settings -> Connect] Online Connections Header */
+"Online Connections" = "Online Connections";
+
+/* [Settings -> Connect] Offline Connections Header */
+"Offline Connections" = "Offline Connections";
+
+/* [Settings -> Connect] pending connection title */
+"Connecting to Desktop" = "Connecting to Desktop";
+
+/* [Settings -> Connect] Scan QR-Code */
+"Scan QR-Code" = "Scan QR-Code";
+
+/* [Connect] instructions text part#1 */
+"Go to " = "Go to ";
+
+/* [Connect] instructions text part#2 */
+" and select connect to scan the QR-Code" = " and select connect to scan the QR-Code";
+
+/* [Connect] Scan QR-Code alert title */
+"Open Cliqz Browser" = "Open Cliqz Browser";
+
+/* [Connect] Scan QR-Code alert message */
+"Please open Cliqz Browser on your computer (or get it from cliqz.com)." = "Please open Cliqz Browser on your computer (or get it from cliqz.com).";
+
+/* [Connect] Connection Failed alert title */
+"Connection Failed" = "Connection Failed";
+
+/* [Connect] Connection Failed alert message */
+"Sorry but devices could not be connected. Please try again." = "Sorry but devices could not be connected. Please try again.";
+
+/* [Connect] Retry button for Connection Failed alert */
+"Retry" = "Retry";
+
+/* [Settings -> Connect] remove connection */
+"Remove Connection" = "Remove Connection";
+
+/* [Settings -> Connect] rename connection */
+"Rename Connection" = "Rename Connection";
+
+/* [Settings -> Connect] rename connection alert message */
+"Prompt description" = "Prompt description";
