--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -315,3 +315,7 @@
 "Allow Camera Access" = "Permettre l’accès à l’appareil photo";
 /* [Connect] Alert message for turning on Camera access when Scanning QR Code */
 "Cliqz Browser does not have access to your camera. To enable access, tap ‘Settings’ and turn on camera." = "Le navigateur Cliqz ne peut pas accéder à l’appareil photo. Pour permettre l’accès, cliquez sur Paramètres et activez l’appareil photo.";
+/* Video Downloader hint title */
+"Video Downloader" = "Téléchargeur des vidéos";
+/* Video Downloader hint description */
+"Download YouTube videos to your Smartphone." = "Téléchargez les vidéos YouTube vers votre smartphone.";
