--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -241,6 +241,8 @@
 "Browsing & History" = "Browsing & History";
 /* [Settings] Block pop-up windows*/
 "Block Pop-up Windows" = "Block Pop-up Windows";
+/* [Settings] Automatic Forget Tab*/
+"Automatic Forget Tab" = "Automatic Forget Tab";
 /* [Setting] Block Ads
  [Settings -> Block Ads] Block Ads */
 "Block Ads" = "Ad-Blocking (Beta)";
@@ -278,6 +280,8 @@
 "Limit Mobile Data Usage" = "Limit Mobile Data Usage";
 /* [Settings -> Limit Mobile Data Usage] toogle footer */
 "Download videos on Wi-Fi Only" = "Only download video on Wi-Fi";
+/* [Settings -> AutoForget Tab] toogle footer */
+"Websites which are known to contain explicit content are automatically opened in Forget Tabs. Visits to such websites are therefore not saved to your history." = "Websites which are known to contain explicit content are automatically opened in Forget Tabs. Visits to such websites are therefore not saved to your history.";
 /* [Connect] No Wi-Fi connection alert title */
 "No Wi-Fi Connection" = "No Wi-Fi Connection";
 /* [Connect] No Wi-Fi connection alert message */
