--- a/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
@@ -239,6 +239,8 @@
 "Browsing & History" = "Navigazione & Cronologia";
 /* [Settings] Block pop-up windows*/
 "Block Pop-up Windows" = "Blocca pop-up";
+/* [Settings] Automatic Forget Tab*/
+"Automatic Forget Tab" = "DimentiTab automatico";
 /* [Setting] Block Ads
  [Settings -> Block Ads] Block Ads */
 "Block Ads" = "Blocca Pubblicità (Beta)";
@@ -276,6 +278,8 @@
 "Limit Mobile Data Usage" = "Limita consumo dati mobili";
 /* [Settings -> Limit Mobile Data Usage] toogle footer */
 "Download videos on Wi-Fi Only" = "Scarica video solo con il Wi-Fi";
+/* [Settings -> AutoForget Tab] toogle footer */
+"Websites which are known to contain explicit content are automatically opened in Forget Tabs. Visits to such websites are therefore not saved to your history." = "I siti web che includono contenuti espliciti saranno aperti automaticamente in un DimentiTab e non verranno salvati nella storia.";
 /* [Connect] No Wi-Fi connection alert title */
 "No Wi-Fi Connection" = "Nessuna connessione Wi-Fi";
 /* [Connect] No Wi-Fi connection alert message */
