--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -230,6 +230,8 @@
 "Browsing & History" = "Navigation & Historique";
 /* [Settings] Block pop-up windows*/
 "Block Pop-up Windows" = "Bloquer les pop-ups";
+/* [Settings] Automatic Forget Tab*/
+"Automatic Forget Tab" = "Mode Oubli Automatique";
 /* [Setting] Block Ads
  [Settings -> Block Ads] Block Ads */
 "Block Ads" = "Bloqueur de Pubs (Bêta)";
@@ -267,6 +269,8 @@
 "Limit Mobile Data Usage" = "Limiter la consommation des données mobiles";
 /* [Settings -> Limit Mobile Data Usage] toogle footer */
 "Download videos on Wi-Fi Only" = "Télécharger les vidéos seulement sur wi-fi";
+/* [Settings -> AutoForget Tab] toogle footer */
+"Websites which are known to contain explicit content are automatically opened in Forget Tabs. Visits to such websites are therefore not saved to your history." = "Les sites web avec du contenu explicite seront ouvert en Mode Oubli de façon automatique et ils ne seront pas sauvegardés dans vostre historique.";
 /* [Connect] No Wi-Fi connection alert title */
 "No Wi-Fi Connection" = "Aucune connection wi-fi";
 /* [Connect] No Wi-Fi connection alert message */
