--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -332,7 +332,7 @@
 /* [Subscriptions] Alert title for asking to subscribe for soccer notificaiton */
 "Would you like to subscribe to the {1}?" = "Would you like to subscribe to the {1}?";
 /* [Subscriptions] Alert message for asking to subscribe for soccer notificaiton */
-"You will be notified about games, goals and important happenings of the #." = "You will be notified about games, goals and important happenings of the {1}.";
+"You will be notified about games, goals and important happenings of the {1}." = "You will be notified about games, goals and important happenings of the {1}.";
 /* [Subscriptions] soccer notification */
 "league" = "League";
 /* [Subscriptions] soccer notification */
@@ -343,10 +343,10 @@
 "Subscribe" = "Subscribe";
 /* [Subscriptions] Alert title for asking to enable push notificaiton from the system
  [Subscriptions] Alert title when failing to subscribe to soccer notification */
-"Could not subscribe to {1}?" = "Could not subscribe to {1}.";
+"Could not subscribe to {1}." = "Could not subscribe to {1}.";
 /* [Subscriptions] Alert message  for asking to enable push notificaiton from the system */
 "Activate push notification to use this feature. Go to settings to allow push notifications then retry." = "Activate push notification to use this feature. Go to settings to allow push notifications then retry.";
 /* [Subscriptions] Alert message when failing to subscribe to soccer notification */
 "Sorry, we encountered some technical difficulties. Please try again" = "Sorry, we encountered some technical difficulties. Please try again";
 /* [Subscriptions] Subscribing HUD */
-"Subscribe to {1}." = "Subscribing to {1}...";
+"Subscribing to {1}." = "Subscribing to {1}...";
