--- a/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/it.lproj/Cliqz.strings
@@ -332,7 +332,7 @@
 /* [Subscriptions] Alert title for asking to subscribe for soccer notificaiton */
 "Would you like to subscribe to the {1}?" = "{1}:vuoi ricevere le notifiche?";
 /* [Subscriptions] Alert message for asking to subscribe for soccer notificaiton */
-"You will be notified about games, goals and important happenings of the #." = "You will be notified about games, goals and important happenings of the {1}.";
+"You will be notified about games, goals and important happenings of the {1}." = "{1}: riceverai notifiche sulle partite, i gol e gli avvenimenti importanti.";
 /* [Subscriptions] soccer notification */
 "league" = "League";
 /* [Subscriptions] soccer notification */
@@ -343,10 +343,10 @@
 "Subscribe" = "Iscriversi";
 /* [Subscriptions] Alert title for asking to enable push notificaiton from the system
  [Subscriptions] Alert title when failing to subscribe to soccer notification */
-"Could not subscribe to {1}?" = "Iscrizione a {1} non riuscita.";
+"Could not subscribe to {1}." = "Iscrizione a {1} non riuscita.";
 /* [Subscriptions] Alert message  for asking to enable push notificaiton from the system */
 "Activate push notification to use this feature. Go to settings to allow push notifications then retry." = "Attiva le notifiche push per questa funzione. Vai su Impostazioni per farlo e poi riprova.";
 /* [Subscriptions] Alert message when failing to subscribe to soccer notification */
 "Sorry, we encountered some technical difficulties. Please try again" = "Spiacenti, si è verificato un problema. Riprova";
 /* [Subscriptions] Subscribing HUD */
-"Subscribe to {1}." = "Iscrizione a {1} in corso.";
+"Subscribing to {1}." = "Iscrizione a {1} in corso.";
