--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -255,6 +255,12 @@
 "Reset all subscriptions" = "Annuler tous les abonnements";
 /* [Settings] Text of the 'Reset all subscriptions' alert */
 "Would you like to reset all your subscriptions (e.g. to Bundesliga games)?" = "Voulez-vous annuler tous les abonnements (ex. pour les matchs de la Ligue 1) ?";
+/* [Settings] Cliqz Tab section header */
+"Cliqz Tab" = "CliqzTab";
+/* [Settings] Show most visited websites */
+"Show most visited websites" = "Afficher les sites les plus visités";
+/* [Settings] Show News */
+"Show News" = "Afficher les actualités";
 /* [Settings] Help section header */
 "Help" = "Aide";
 /* [Settings] FAQs & Support */
